# cookie-tester

./: .cruft.json  README.md  cookie_tester.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: cookie_tester.rst.txt  modules.rst.txt
docs/: conf.py  index.rst
src/cookie_tester/: __init__.py  cli.py
tests/: __init__.py  demo_test.py
