[tool.poetry]
name = "cookie-tester"
version = "0.1.0"
description = "cookie-tester"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^65.0.0"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
cookie-tester = "cookie-tester.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
